tests/ui/pattern/usefulness/consts-opaque.stderr
error: to use a constant of type `Foo` in a pattern, `Foo` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/consts-opaque.rs:30:9
   |
LL |         FOO => {}
   |         ^^^

error: unreachable pattern
  --> $DIR/consts-opaque.rs:30:9
   |
LL |         FOO => {}
   |         ^^^ this pattern is irrefutable; subsequent arms are never executed
LL |
LL |         _ => {} // should not be emitting unreachable warning
   |         ^^^^^^^ this arm is never executed
   |
note: the lint level is defined here
  --> $DIR/consts-opaque.rs:6:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: to use a constant of type `Foo` in a pattern, `Foo` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/consts-opaque.rs:38:9
   |
LL |         FOO_REF => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/consts-opaque.rs:38:9
   |
LL |         FOO_REF => {}
   |         ^^^^^^^ this pattern is irrefutable; subsequent arms are never executed
LL |
LL |         Foo(_) => {} // should not be emitting unreachable warning
   |         ^^^^^^^^^^^^ this arm is never executed

warning: to use a constant of type `Foo` in a pattern, `Foo` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/consts-opaque.rs:46:9
   |
LL |         FOO_REF_REF => {}
   |         ^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #62411 <https://github.com/rust-lang/rust/issues/62411>
   = note: `#[warn(indirect_structural_match)]` on by default

error: to use a constant of type `Bar` in a pattern, `Bar` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/consts-opaque.rs:54:9
   |
LL |         BAR => {} // should not be emitting unreachable warning
   |         ^^^

error: multiple unreachable patterns
  --> $DIR/consts-opaque.rs:53:9
   |
LL |         Bar => {}
   |         ^^^ this pattern is irrefutable; subsequent arms are never executed
LL |         BAR => {} // should not be emitting unreachable warning
   |         ^^^^^^^^^ this arm is never executed
...
LL |         _ => {}
   |         ^^^^^^^ this arm is never executed

error: to use a constant of type `Bar` in a pattern, `Bar` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/consts-opaque.rs:62:9
   |
LL |         BAR => {}
   |         ^^^

error: multiple unreachable patterns
  --> $DIR/consts-opaque.rs:62:9
   |
LL |         BAR => {}
   |         ^^^ this pattern is irrefutable; subsequent arms are never executed
LL |
LL |         Bar => {} // should not be emitting unreachable warning
   |         ^^^^^^^^^ this arm is never executed
...
LL |         _ => {}
   |         ^^^^^^^ this arm is never executed

error: to use a constant of type `Bar` in a pattern, `Bar` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/consts-opaque.rs:72:9
   |
LL |         BAR => {}
   |         ^^^

error: to use a constant of type `Bar` in a pattern, `Bar` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/consts-opaque.rs:74:9
   |
LL |         BAR => {} // should not be emitting unreachable warning
   |         ^^^

error: multiple unreachable patterns
  --> $DIR/consts-opaque.rs:72:9
   |
LL |         BAR => {}
   |         ^^^ this pattern is irrefutable; subsequent arms are never executed
LL |
LL |         BAR => {} // should not be emitting unreachable warning
   |         ^^^^^^^^^ this arm is never executed
...
LL |         _ => {} // should not be emitting unreachable warning
   |         ^^^^^^^ this arm is never executed

error: to use a constant of type `Baz` in a pattern, `Baz` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/consts-opaque.rs:82:9
   |
LL |         BAZ => {}
   |         ^^^

error: multiple unreachable patterns
  --> $DIR/consts-opaque.rs:82:9
   |
LL |         BAZ => {}
   |         ^^^ this pattern is irrefutable; subsequent arms are never executed
LL |
LL |         Baz::Baz1 => {} // should not be emitting unreachable warning
   |         ^^^^^^^^^^^^^^^ this arm is never executed
...
LL |         _ => {}
   |         ^^^^^^^ this arm is never executed

error: to use a constant of type `Baz` in a pattern, `Baz` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/consts-opaque.rs:93:9
   |
LL |         BAZ => {}
   |         ^^^

error: unreachable pattern
  --> $DIR/consts-opaque.rs:93:9
   |
LL |         BAZ => {}
   |         ^^^ this pattern is irrefutable; subsequent arms are never executed
LL |
LL |         _ => {}
   |         ^^^^^^^ this arm is never executed

error: to use a constant of type `Baz` in a pattern, `Baz` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/consts-opaque.rs:101:9
   |
LL |         BAZ => {}
   |         ^^^

error: multiple unreachable patterns
  --> $DIR/consts-opaque.rs:101:9
   |
LL |         BAZ => {}
   |         ^^^ this pattern is irrefutable; subsequent arms are never executed
LL |
LL |         Baz::Baz2 => {} // should not be emitting unreachable warning
   |         ^^^^^^^^^^^^^^^ this arm is never executed
LL |
LL |         _ => {} // should not be emitting unreachable warning
   |         ^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/consts-opaque.rs:130:9
   |
LL |         Wrap(_) => {}
   |         ^^^^^^^ this pattern is irrefutable; subsequent arms are never executed
LL |         WRAPQUUX => {} // detected unreachable because we do inspect the `Wrap` layer
   |         ^^^^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/consts-opaque.rs:145:9
   |
LL |         WHOKNOWSQUUX => {} // detected unreachable because we do inspect the `WhoKnows` layer
   |         ^^^^^^^^^^^^^^^^^^ this arm is never executed

error: aborting due to 19 previous errors; 1 warning emitted

